# DRF-template

./: .dockerignore  .env.dev-sample  .env.prod-sample  .env.prod.db-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  tox.ini
compose/local/: .env-sample  .pg.env-sample  Dockerfile
compose/prod/: .env-sample  Dockerfile
env/: .env.dev-sample
env_conf/: .dev.env  .env.dev-sample  .env.prod-sample  .prod.db.env  .prod.env  .prod.env-sample
fixtures/: fixture.json
nginx/: nginx.conf
project/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  requirements.txt
project/apps/accounts/: admin.py  models.py
project/apps/accounts/api/v1/: urls.py
project/config/: settings.py  urls.py
src/: .dockerignore  .pytest.ini  Dockerfile  Dockerfile.prod  conftest.py  entrypoint.sh  pytest.ini  requirements.txt
src/accounts/: admin.py
src/accounts/api/v1/: urls.py
src/accounts/migrations/: 0001_initial.py
src/apps/accounts/: apps.py  models.py
src/apps/accounts/api/v1/: tests.py  urls.py
src/apps/accounts/migrations/: 0001_initial.py  0002_auto_20211203_1409.py
src/apps/utils/health/: urls.py  views.py
src/config/: settings.py  urls.py
src/core/: celery.py  urls.py
src/core/settings/: base.py  container.py  dev.py
