[tool.poetry]
name = "yavolonter"
version = "0.1.0"
description = "yavolonter"
authors = ["DiceNameIsMy <dicenameismy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
djangorestframework-simplejwt = "^5.0.0"
psycopg2-binary = "^2.9.3"
celery = {extras = ["redis"], version = "^5.2.3"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
